--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="today" id="current-temp">
                 <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon" class="w-icon">
                 <div class="other">
-                    <div class="day">Monday</div>
+                    <div class="day">Mon</div>
                     <div class="temp">Night - 25.6&#176; C</div>
                     <div class="temp">Day - 35.6&#176; C</div>
                 </div>
@@ -89,8 +89,8 @@
         </div>
     </div>
 
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-    <script src="https://momentjs.com/downloads/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- <script src="https://momentjs.com/downloads/moment.min.js"></script> -->
     <script src='main.js'></script>
 </body>
 
