--- a/index.html
+++ b/index.html
@@ -11,79 +11,79 @@
 
 <body>
     <div class="container">
-        <div class="current-info">
+        <div class="info-actual">
 
-            <div class="date-container">
-                <div class="time" id="time">
+            <div class="fecha-container">
+                <div class="tiempo" id="tiempo">
                     12.30 <span id="am-pm">PM</span>
                 </div>
 
-                <div class="date" id="date">
-                    Monday, 25 May
+                <div class="fecha" id="fecha">
+                    Lunes, 25 May
                 </div>
 
-                <div class="others" id="current-weather-items">
+                <div class="otros" id="elementos-tiempo-actual">
 
                 </div>
             </div>
 
-            <div class="place-container">
-                <div class="time-zone" id="time-zone">Asia/Kolkata</div>
-                <div id="country" class="country">TN</div>
+            <div class="lugar-container">
+                <div class="zona-horaria" id="zona-horaria">Asia/Kolkata</div>
+                <div id="pais" class="pais">TN</div>
             </div>
         </div>
 
-        <div class="future-forecast">
-            <div class="today" id="current-temp">
-                <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon" class="w-icon">
-                <div class="other">
-                    <div class="day">Mon</div>
-                    <div class="temp">Night - 25.6&#176; C</div>
-                    <div class="temp">Day - 35.6&#176; C</div>
+        <div class="prevision-futura">
+            <div class="hoy" id="temp-actual">
+                <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="icon-tiempo" class="icon-t">
+                <div class="otro">
+                    <div class="dia">Mon</div>
+                    <div class="temp">Noche - 25.6&#176; C</div>
+                    <div class="temp">Día - 35.6&#176; C</div>
                 </div>
             </div>
 
-            <div class="weather-forecast" id="weather-forecast">
-                <div class="weather-forecast-item">
-                    <div class="day">Tue</div>
-                    <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon" class="w-icon">
-                    <div class="temp">Night - 21.6&#176; C</div>
-                    <div class="temp">Day - 35.6&#176; C</div>
+            <div class="prevision-tiempo" id="prevision-tiempo">
+                <div class="elem-prevision-tiempo">
+                    <div class="dia">Tue</div>
+                    <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="icon-tiempo" class="icon-t">
+                    <div class="temp">Noche - 21.6&#176; C</div>
+                    <div class="temp">Día - 35.6&#176; C</div>
                 </div>
 
-                <div class="weather-forecast-item">
-                    <div class="day">Wed</div>
-                    <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon" class="w-icon">
-                    <div class="temp">Night - 21.6&#176; C</div>
-                    <div class="temp">Day - 35.6&#176; C</div>
+                <div class="elem-prevision-tiempo">
+                    <div class="dia">Wed</div>
+                    <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="icon-tiempo" class="icon-t">
+                    <div class="temp">Noche - 21.6&#176; C</div>
+                    <div class="temp">Día - 35.6&#176; C</div>
                 </div>
 
-                <div class="weather-forecast-item">
-                    <div class="day">Thu</div>
-                    <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon" class="w-icon">
-                    <div class="temp">Night - 21.6&#176; C</div>
-                    <div class="temp">Day - 35.6&#176; C</div>
+                <div class="elem-prevision-tiempo">
+                    <div class="dia">Thu</div>
+                    <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="icon-tiempo" class="icon-t">
+                    <div class="temp">Noche - 21.6&#176; C</div>
+                    <div class="temp">Día - 35.6&#176; C</div>
                 </div>
 
-                <div class="weather-forecast-item">
-                    <div class="day">Fri</div>
-                    <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon" class="w-icon">
-                    <div class="temp">Night - 21.6&#176; C</div>
-                    <div class="temp">Day - 35.6&#176; C</div>
+                <div class="elem-prevision-tiempo">
+                    <div class="dia">Fri</div>
+                    <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="icon-tiempo" class="icon-t">
+                    <div class="temp">Noche - 21.6&#176; C</div>
+                    <div class="temp">Día - 35.6&#176; C</div>
                 </div>
 
-                <div class="weather-forecast-item">
-                    <div class="day">Sat</div>
-                    <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon" class="w-icon">
-                    <div class="temp">Night - 21.6&#176; C</div>
-                    <div class="temp">Day - 35.6&#176; C</div>
+                <div class="elem-prevision-tiempo">
+                    <div class="dia">Sat</div>
+                    <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="icon-tiempo" class="icon-t">
+                    <div class="temp">Noche - 21.6&#176; C</div>
+                    <div class="temp">Día - 35.6&#176; C</div>
                 </div>
 
-                <div class="weather-forecast-item">
-                    <div class="day">Sun</div>
-                    <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon" class="w-icon">
-                    <div class="temp">Night - 21.6&#176; C</div>
-                    <div class="temp">Day - 35.6&#176; C</div>
+                <div class="elem-prevision-tiempo">
+                    <div class="dia">Sun</div>
+                    <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="icon-tiempo" class="icon-t">
+                    <div class="temp">Noche - 21.6&#176; C</div>
+                    <div class="temp">Día - 35.6&#176; C</div>
                 </div>
             </div>
         </div>
