Estilizar a mi gusto (1)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
     <div class="container">
         <div class="info-actual">
-
             <div class="fecha-container">
                 <div class="tiempo" id="tiempo">
                     12.30 <span id="am-pm">PM</span>
@@ -89,7 +88,9 @@
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
+        integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- <script src="https://momentjs.com/downloads/moment.min.js"></script> -->
     <script src='main.js'></script>
 </body>
