Mostrar ciudad y arreglar estilo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             </div>
 
             <div class="lugar-container">
-                <div class="zona-horaria" id="zona-horaria">Asia/Kolkata</div>
+                <div class="lugar-ubicacion" id="lugar-ubicacion">Madrid</div>
+                <div class="zona-horaria" id="zona-horaria">Europa/Madrid</div>
                 <div id="pais" class="pais">TN</div>
             </div>
         </div>
